[package]
name = "pod-metrics-exporter"
version = "2.0.1"
edition = "2021"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5", features = ["http2"] }
serde_json = "1.0.117"